fixing ios layout issue

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,12 +6,18 @@
 .meganav-bg {
   background-color: #FFFFFF;
   width: 100%;
-  height: 120%;
+  height: 160%;
   position: absolute;
   top: 0;
   left: 0;
   z-index: 3;
   border-bottom: 1px solid black;
+}
+
+@media (min-width: 414px) {
+  .meganav-bg {
+    height: 120%;
+  }
 }
 @media (min-width: 800px) {
   .meganav-bg {
